<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" 
    android:background="@drawable/questiontexbg">

    <TextView
        android:id="@+id/lb_select_category"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/transparent"
        android:gravity="center_vertical|center_horizontal"
        android:text="@string/select_category"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnCategory1"
                style="@style/CategoryButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:tag="0"
                android:text="@string/category_genel" />

            <Button
                android:id="@+id/btnCategory2"
                style="@style/CategoryButtonStyle"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:tag="1"
                android:text="@string/category_tarih" />

            <Button
                android:id="@+id/btnCategory3"
                style="@style/CategoryButtonStyle"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:tag="2"
                android:text="@string/category_sinema" />

            <Button
                android:id="@+id/btnCategory4"
                style="@style/CategoryButtonStyle"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:tag="3"
                android:text="@string/category_muzik" />

            <Button
                android:id="@+id/btnCategory5"
                style="@style/CategoryButtonStyle"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:tag="4"
                android:text="@string/category_siyaset" />

            <Button
                android:id="@+id/btnCategory6"
                style="@style/CategoryButtonStyle"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:tag="5"
                android:text="@string/category_spor" />

            <Button
                android:id="@+id/btnCategory7"
                style="@style/CategoryButtonStyle"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:tag="6"
                android:text="@string/category_edebiyat" />

            <Button
                android:id="@+id/btnCategory8"
                style="@style/CategoryButtonStyle"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:tag="7"
                android:text="@string/category_cografya" />

            <Button
                android:id="@+id/btnCategory9"
                style="@style/CategoryButtonStyle"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:tag="8"
                android:text="@string/category_bilgisayar" />

            <Button
                android:id="@+id/btnCategory10"
                style="@style/CategoryButtonStyle"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:tag="9"
                android:text="@string/category_matematik" />

        </LinearLayout>

    </ScrollView>

</LinearLayout>
