<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_header_selector"
    android:orientation="vertical"
    tools:context="${packageName}.${activityClass}" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <Button
                android:id="@+id/btnCategory2"
                style="@style/CategoryButtonStyle"
                android:drawableTop="@drawable/general_category"
               
                android:tag="1"
                android:text="@string/category_bilgisayar" />
        
        <Button
                android:id="@+id/btnCategory3"
                style="@style/CategoryButtonStyle"
                android:drawableTop="@drawable/general_category"
                android:tag="2"
                android:text="@string/category_sinema" />
		<Button
                android:id="@+id/btnCategory4"
                style="@style/CategoryButtonStyle"
                android:drawableTop="@drawable/general_category"
                android:tag="3"
                android:text="@string/category_siyaset" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" 
        android:baselineAligned="false">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnCategory5"
                style="@style/CategoryButtonStyle"
                android:drawableTop="@drawable/general_category"
                android:tag="4"
                android:text="@string/category_muzik" />

            <Button
                android:id="@+id/btnCategory6"
                style="@style/CategoryButtonStyle"
                android:drawableTop="@drawable/general_category"
                android:tag="5"
                android:text="@string/category_cografya" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnCategory1"
                style="@style/CategoryButtonStyle"
                android:drawableTop="@drawable/general_category"
                android:tag="0"
                android:text="@string/category_genel" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical" >

            <Button
                android:id="@+id/btnCategory7"
                style="@style/CategoryButtonStyle"
                android:drawableTop="@drawable/general_category"
                android:tag="6"
                android:text="@string/category_matematik" />
        
	        <Button
	                android:id="@+id/btnCategory8"
	                style="@style/CategoryButtonStyle"
	                android:drawableTop="@drawable/general_category"
	                android:tag="7"
	                android:text="@string/category_spor" />
		
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
		
         <Button
                android:id="@+id/btnCategory9"
                style="@style/CategoryButtonStyle"
                android:drawableTop="@drawable/general_category"
                android:tag="8"
                android:text="@string/category_tarih" />
        
        <Button
                android:id="@+id/btnCategory10"
                style="@style/CategoryButtonStyle"
                android:drawableTop="@drawable/general_category"
                android:tag="9"
                android:text="@string/category_edebiyat" />
		<Button
                android:id="@+id/btnCategory11"
                style="@style/CategoryButtonStyle"
                android:drawableTop="@drawable/general_category"
                android:tag="10"
                android:text="@string/category_misc" />
        
        
    </LinearLayout>

</LinearLayout>